<resources>
    <string name="app_name">My Application</string>
    <string name="first_button">first</string>
    <string name="second_button">second</string>
    <string name="third_button">third</string>
    <string name="fourth_button">fourth</string>
    <string name="zero">0</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="fifth">5</string>
    <string name="sixth">6</string>
    <string name="seventh">7</string>
    <string name="eight">8</string>
    <string name="ninth">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equals">=</string>
    <string name="cancel">C</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_error">Login Error</string>
    <string name="login_success">Login Success</string>
    <string name="title_activity_main_registrazione">MainActivityRegistrazione</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="milk">Milk</string>
    <string name="bread">Bread</string>
    <string name="tea">Tea</string>
    <string name="total">Total</string>
    <string name="buy">Buy</string>
    <string name="num1">0</string>
    <string name="euro">Euro</string>


</resources>
